test-nginx-ing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-http-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: internal-http-nginx-pvc
          mountPath: /data
      volumes:
      - name: internal-http-nginx-pvc
        persistentVolumeClaim:
          claimName: internal-http-nginx-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: internal-http-nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    k8s-app: internal-http-nginx-ingress
  name: internal-http-nginx-ingress
spec:
  rules:
  - host: nginx.test.local
    http:
      paths:
      - path: /
        backend:
          serviceName: internal-http-nginx-service
          servicePort: 80
